--- a/server/template/template.js.hbs
+++ b/server/template/template.js.hbs
@@ -2,12 +2,12 @@
 
 import React from 'react';
 
-const {{name}} = props => {
+const {{mainComponentName}} = props => {
 return (
 <div>
-    {{name}}
+    {{mainComponentName}}
 </div>
 );
 };
 
-export default {{name}};
+export default {{mainComponentName}};
