--- a/server/template/template.js.hbs
+++ b/server/template/template.js.hbs
@@ -2,12 +2,12 @@
 
 import React from 'react';
 
-const {{mainComponentName}} = props => {
+const {{pascalCase name}} = () => {
 return (
 <div>
-    {{mainComponentName}}
+    {{>elementControls controls}}
 </div>
 );
 };
 
-export default {{mainComponentName}};
+export default {{pascalCase name}};
